fix alignment in recipe page

--- a/front-end/css/style.css
+++ b/front-end/css/style.css
@@ -140,6 +140,10 @@ header * {
   color: #FFFFFF;
 }
 
+#shareButton,#printButton{
+  margin-left: 5%;
+}
+
 /* #searchErrorPopup{
   display: none;
 } */
